<resources>
    <string name="app_name">bookViewer</string>
    <string name="email_hint">email@example.com</string>
    <string name="password_hint">password</string>
    <string name="login_button_text">Login</string>
    <string name="signup_button_text">SignUp</string>
    <string name="create_account_button_text">CreateAccount</string>
    <string name="user_name_hint">username</string>
    <string name="phone_hint">phone 10 digits length</string>
    <string name="confirm_password_hint">confirmPassword</string>
    <string name="novels_text">Novels</string>
    <string name="technology_text">technology</string>
    <string name="self_development">selfdevelopment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="fav">Favorite</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="profile">profile</string>
    <string name="contact_us">ContactUs</string>
    <string name="about_us">AboutUs</string>
    <string name="logout">LogOut</string>
    <string name="aboutus_text">
        book viewer app is an application designed for people who like reading to make the them to access their books resources
        in easy way and order these books based on their classification and make the reader able to download these books as a pdf files
        can store them and read any downloaded book in any time the reader want.
    </string>
    <string name="about_developer">AboutDeveloper</string>
    <string name="developer_info">
        The developer of this app is Eng.AbdHussein have a bachelor\'s degree in computer engineering at amman al ahlia university
        ,and have a android development using java android studio certification at programmer academy for training and desk top development using
        C# windowsForm visualStudio at hassouna academy and currently study Artificial Intelligence diploma at xteam egypt
    </string>
    <string name="about_app_title">AboutApp</string>
    <string name="contact_us_email">abdkhaleel@yahoo.com</string>
    <string name="contact_us_phone">00962795410867</string>
    <string name="contact_us_email_title">Email:</string>
    <string name="contact_us_phone_title">Phone:</string>
    <string name="social">SocialMedia</string>
    <string name="empty" />
    <string name="update_button_text">UpdateYourProfile</string>
    <string name="delete_text">DeleteAccount</string>
    <string name="book_name">BookName:</string>
    <string name="download">Download AS PDF</string>
    <string name="author_name">AuthorName:</string>
    <string name="year">Year:</string>
    <string name="description">Description</string>
</resources>