<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_home_24"/>
                <item
                  android:id="@+id/nav_fav"
                android:title="@string/fav"
                    android:icon="@drawable/ic_baseline_favorite_24"/>
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/settings"
                    android:icon="@drawable/ic_baseline_settings_24"/>
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_contact_us"
                    android:title="@string/contact_us"
                    android:icon="@drawable/ic_baseline_contacts_24"/>
                <item
                    android:id="@+id/nav_about_us"
                    android:title="@string/about_us"
                    android:icon="@drawable/ic_baseline_info_24"
                    />
                <item
                    android:id="@+id/nav_log_out"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_baseline_logout_24"/>
</menu>