<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/showUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:hint="@string/user_name_hint"
            android:padding="10dp"
            android:textColor="@color/purple_700" />
        <TextView
            android:id="@+id/showUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:textColor="@color/purple_700" />
        <TextView
            android:id="@+id/showUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:hint="@string/phone_hint"
            android:padding="10dp"
            android:textColor="@color/purple_700" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>