<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.fragments.ContactUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            app:cardCornerRadius="18dp">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2">
                <TextView
                    android:id="@+id/ContactUsEmailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_email_title"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/ContactUsEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_email"
                    android:layout_margin="10dp"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:drawableStart="@drawable/ic_baseline_email_24"/>
                <TextView
                    android:id="@+id/ContactUsPhoneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_phone_title"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/ContactUsPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us_phone"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    android:textStyle="normal"
                    android:drawableStart="@drawable/ic_baseline_phone_24"/>
                <TextView
                    android:id="@+id/ContactUsSocialTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"/>
                <!--instgramButton-->
                <ImageButton
                    android:id="@+id/instgramButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/empty"
                    android:src="@drawable/instagram"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/whatsappButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/whatsapp_icon" />



            </GridLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>