<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.LogInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/book_background"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="@dimen/card_margin"
            app:cardCornerRadius="@dimen/card_radius">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
                <!--emailEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/email_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--passwordEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/password_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--loginButton-->
                <Button
                    android:id="@+id/loginButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/btn_margin_left"
                    android:layout_marginTop="@dimen/btn_margin_top"
                    android:text="@string/login_button_text" />
                <!--signUpButton-->
                <Button
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/btn_margin_left"
                    android:layout_marginTop="@dimen/btn_margin_top"
                    android:text="@string/signup_button_text" />
            </GridLayout>


        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>