<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.fragments.ProfileFragment">
 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F9CEEE">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="35dp"
            app:cardCornerRadius="15dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2">
                <!--update emailEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/updateEmailTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/email_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--updateUserNameEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/updateUserNameTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/user_name_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--updatePhoneEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/updatePhoneTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/phone_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--update passwordEditText-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/updatePasswordTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/edit_text_margin"
                    android:hint="@string/password_hint"
                    app:hintAnimationEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:textAlignment="textStart"
                        android:textSize="@dimen/text_size" />

                </com.google.android.material.textfield.TextInputLayout>
                <!--updateAccountButton-->
                <Button
                    android:id="@+id/updateAccountButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill_horizontal"
                    android:layout_marginStart="@dimen/btn_margin_left"
                    android:layout_marginTop="@dimen/btn_margin_top"
                    android:layout_marginEnd="@dimen/btn_margin_left"
                    android:layout_marginBottom="5dp"
                    android:text="@string/update_button_text"
                    app:icon="@drawable/ic_baseline_create_24" />
            </GridLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
 </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>