<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activites.fragments.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
               <!--cardViewAboutDeveloper-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/card_margin"
                    app:cardCornerRadius="10dp">

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:columnCount="1">

                        <TextView
                            android:id="@+id/showDeveloper"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:text="@string/about_developer"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="400dp"
                            android:layout_margin="15dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/me"
                            app:layout_columnSpan="1"
                            app:layout_gravity="fill_horizontal" />

                        <TextView
                            android:id="@+id/Developerinfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/purple_700"
                            android:textSize="17sp"
                            app:layout_gravity="fill_horizontal"
                            android:text="@string/developer_info"

                            />


                    </androidx.gridlayout.widget.GridLayout>
                </com.google.android.material.card.MaterialCardView>
                <!--cardViewAboutApp-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/card_margin"
                    app:cardCornerRadius="10dp">

                    <androidx.gridlayout.widget.GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:columnCount="1">

                        <TextView
                            android:id="@+id/showApp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:gravity="center"
                            android:text="@string/about_app_title"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="match_parent"
                            android:layout_height="278dp"
                            android:layout_margin="15dp"
                            android:scaleType="fitStart"
                            android:src="@drawable/book_background"
                            app:layout_columnSpan="1"
                            app:layout_gravity="fill_horizontal" />

                        <TextView
                            android:id="@+id/AppInfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp"
                            android:textAlignment="viewStart"
                            android:textColor="@color/purple_700"
                            android:textSize="17sp"
                            app:layout_gravity="fill_horizontal"
                            android:text="@string/aboutus_text"

                            />


                    </androidx.gridlayout.widget.GridLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>